--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^2.12"
+        "livewire/livewire": "^2.12",
+        "werneckbh/laravel-qr-code": "^0.1.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
