--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,10 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.1",
@@ -49,6 +52,18 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "post-install-cmd": [
+            "chmod -R 777 bootstrap/cache",
+            "chmod -R 777 storage"
+        ],
+        "heroku-prebuild": [
+            "php artisan clear-compiled",
+            "php artisan cache:clear",
+            "php artisan view:clear"
+        ],
+        "heroku-postdeploy": [
+            "php artisan migrate --force"
         ]
     },
     "extra": {
